      messages 1-3, 5, 9, 18 and 19.
    - names and call signs are now trimmed in messages 5 and 21
    - fixed six-bit vector indexing bugs in message 5
  - PositionParser; leading zeros may now be omitted in the lat/lon fields. The
    separate lat/lon parser methods replaced with parseDegrees().
  - SentenceReadeder; added methods for removing listeners by sentence type.

  Contributions:
  - GST parser by Tero Laitinen (@tlaitinen)
  - AbstractSentenceListener improvements by Axel Uhl (@axeluhl)
  - HTC and HTD parsers by Paweł Kozioł (@pkoziol)
  - AIS validation improvements by Jyrki Jakobsson (@jyrkija)
  - SentenceReader improvements by Martin Wegner (@Martin-Wegner) and
    Michael Skogberg (@malliina)

Version 0.10.0 (2017-06-21)

  - Preliminary support for AIS (Automatic Identification System)
    - Support for VDM and VDO sentences; the NMEA-0183 layer of AIS messages
    - decoding of messages 1, 2, 3, 4, 5, 9, 18, 19, 21 and 24
    - listener intefaces and classes for receiving messages
    - TalkerId enum; added AD, AN, AR, AS, AT, AX an SA to support AIS talkers
    - utility classes for extracted data
  - Support for MHU sentences; relative and absolute humidity with dew point.
  - Support for MMB sentences; barometric pressure.
  - Support for CUR sentences; Water currents information.
  - Support for VWR sentences; Relative wind speed and angle.
  - Support for VWT sentences; True wind speed and angle.
  - Support for GNS sentences; GNSS fix data.
  - SentenceReader performance improvements. Removed read interval and related
    methods, i.e. incoming data is now read immediately.
  - PositionProvider may now use VTG sentence to acquire needed values.
  - MWDSentence; fixed missing base interface, incorrect field count and knots indicator char.
  - Added missing setSatelliteCount() in GGASentence
  - Added precise mode in FaaMode enum ('P')
  - TalkerId; added OC to support OpenPlotter (sailoog.com)

  Contributions: