@@ -1,6 +1,6 @@
 /* 
  * DTASentence.java
- * Copyright (C) 2010 Kimmo Tuukkanen
+ * Copyright (C) 2019 Kimmo Tuukkanen
  * 
  * This file is part of Java Marine API.
  * <http://ktuukkan.github.io/marine-api/>
@@ -31,25 +31,56 @@ import java.util.Date;
  * <p>Example GasFinderMC:<br><code>$GFDTA,  1, 1.5, 99, 600, 11067,  2002/03/01  00:30:28,  HF-1xxx, 1, *2F  </code></p>
  *
  * @author Bob Schwarz
- * @see <a href="https://github.com/LoadBalanced/marine-api">marina-api fork</a>
+ * @see <a href="https://github.com/LoadBalanced/marine-api">marine-api fork</a>
  * 
  */
 public interface DTASentence extends Sentence {
 
+	/**
+	 * Gets the optional channel from Sentence (GasFinderMC only).
+	 * @return Channel number 1 - 8.
+	 */
 	int getChannelNumber();
 	
+	/**
+	 * Gets the max eight-digit Gas Concentration from Sentence.
+	 * @return Gas Concentration in ppmm (parts per million meter) 
+	 */
 	double getGasConcentration();
 	
+	/**
+	 * Gets the two-digit Confidence Factor from Sentence.
+	 * @return Confidence Factor as number between 0 - 99.
+	 */
 	int getConfidenceFactorR2();
 	
+	/**
+	 * Gets the max four-digit distance to retro from Sentence.
+	 * @return distance in meters (GasFinder2) or meters x 10 (GasFinderMC).
+	 */
 	double getDistance();
 	
+	/**
+	 * Gets the max five-digit Light Level from Sentence.
+	 * @return Light Level as integer.
+	 */
 	int getLightLevel();
 	
+	/**
+	 * Gets the max nineteen-digit current date/time from Sentence.
+	 * @return date/time as YYYY/MM/DD hh:mm:ss.
+	 */
 	Date getDateTime();
 	
+	/**
+	 * Gets the max ten-char. device serial number from Sentence.
+	 * @return Serial Number id
+	 */
 	String getSerialNumber();
 	
+	/**
+	 * Gets the max 4-digit status code from Sentence.
+	 * @return Status Code as number in range: 1 - 0xFFFF
+	 */
 	int getStatusCode();
-	
 }
