@@ -1,6 +1,6 @@
 /* 
  * DTBTest.java
- * Copyright (C) 2010 Kimmo Tuukkanen
+ * Copyright (C) 2019 Kimmo Tuukkanen
  * 
  * This file is part of Java Marine API.
  * <http://ktuukkan.github.io/marine-api/>
@@ -36,7 +36,7 @@ import net.sf.marineapi.nmea.sentence.TalkerId;
  * DTBTest - test class for Boreal GasFinder Channel B
  * 
  * @author Bob Schwarz
- * @see <a href="https://github.com/LoadBalanced/marine-api">marina-api fork</a>
+ * @see <a href="https://github.com/LoadBalanced/marine-api">marine-api fork</a>
  * 
  */
 public class DTBTest {
